# Camera_Qt

./: .gitignore  CMakeLists.txt  resources.aps  resources.rc
src/: main.cpp
src/camera/: camera.cpp  camera.h  imagecapture.cpp  imagecapture.h  mediarecorder.cpp  mediarecorder.h  videoinputs.cpp  videoinputs.h  videosink.cpp  videosink.h  videowidget.cpp  videowidget.h
src/ui/: cameraformatscombobox.cpp  cameraformatscombobox.h  cameranamescombobox.cpp  cameranamescombobox.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  mainwindow_ui.h
src/wrappers/: filesystem.cpp  filesystem.h
